--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ function MM_swapImage() { //v3.0
   <div data-role="header" data-add-back-btn="true" data-back-btn-text="Regresar" data-back-btn-theme="a">
   <h2>Atlixco(Pueblo Mágico)  </h2>
     </div>
-   <iframe src="visor/wowslider.html" style="width:300px;height:240px;max-width:100%;overflow:hidden;border:none;padding:0;margin:0 auto;display:block;" marginheight="0" marginwidth="0"></iframe>
+   <iframe src="visor/wowslider.html" style="width:300px;height:230px;max-width:100%;overflow:hidden;border:none;padding:0;margin:0 auto;display:block;" marginheight="0" marginwidth="0"></iframe>
  <!-- Start WOWSlider.com --><!-- End WOWSlider.com --><br><br>
   <div data-role="main" class="ui-content">
 
@@ -79,7 +79,6 @@ function MM_swapImage() { //v3.0
   </div>
   <br>
   <br>
-  <a href="http://turismoatlixco.com/"><button> Para Mayor Imformacion</button></a>
   <div data-role="collapsible" data-content-theme="false">
   <h1>Sobre El Autor</h1>
   <div>
@@ -91,9 +90,10 @@ function MM_swapImage() { //v3.0
   <p>Email:eduardo4g.dam@gmail.com</p>
    <p>Escuela:CBTis No.16</p>
     <p>Especialidad:Programacion</p>
-     <p></p>
+
   </div>
   </div>
+  Para Mas Imformacion sobre atlixco:<a href="http://turismoatlixco.com/"> http://turismoatlixco.com/</a>
   </div>
  <div data-role="footer" align="center" data-theme="a"data-position="fixed">
   <p><img src="res/android/mdpi.png"width="56" height="46">
@@ -125,9 +125,13 @@ function MM_swapImage() { //v3.0
    <h1>Ubicacion</h1>
    <p>Se ubica a 25 km de la ciudad de Puebla, capital del Estado y cuenta con dos importantes vías de acceso: la Carretera Federal 190 y la moderna Autopista Vía Atlixcáyotl.
 </p>
-  <center> <img src="imagenes/Ubic.png"></center> </div>
-   <br><br>
-   <iframe width="250" height="150" src="https://www.youtube.com/embed/7kD0c6dMcfA" frameborder="0" allowfullscreen></iframe>
+  <center> 
+    <p><img src="imagenes/Ubic.png"></p>
+  </center> </div>
+  <div data-role="collapsible" data-content-theme="false">
+   <h1>Ubicacion</h1>
+  <center> <iframe width="250" height="150" src="https://www.youtube.com/embed/7kD0c6dMcfA" frameborder="0" allowfullscreen></iframe></center>
+   </div>
    </div>
  <div data-role="footer" align="center" data-theme="a"data-position="fixed">
 <p><img src="res/android/mdpi.png"width="56" height="46"></p>
@@ -311,12 +315,12 @@ A partir de Atlixco se ingresa a una carretera federal que cuenta en su trayecto
    </div>
     <div data-role="collapsible" data-content-theme="false">
    <h1>Enchiladas</h1>
-   <center> <img src="imagenes/enchilada-de-queso.jpg" width="379" height="207">
+   <center> <img src="imagenes/enchilada-de-queso.jpg" width="255" height="207">
 </center> <p>Los rollitos que se forman uno tras otro para cubrirse de una delicada salsa. Rellenas de pollo, bañadas en salsa verde, roja o mole que se acompañan de lechuga, aguacate, crema, queso, rábano y cebolla, listos para degustarse calientitos y bien bañaditos.</p>
  </div>
   <div data-role="collapsible" data-content-theme="false">
    <h1>Barbacoa</h1>
-   <center> <img src="imagenes/barba.jpg" width="352" height="196">
+   <center> <img src="imagenes/barba.jpg" width="320" height="196">
 </center> <p>El estilo de carne con un sabor inigualable que te hará chupar los dedos.
 La carne de borrego hecha en barbacoa es uno de los estilos de popularidad en el centro del país. Elaborada dentro de la tierra con hojas de maguey alcanza su mejor punto en sabor; lo puedes preparar en taco o simplemente con una rica salsa y aguacate. No olvides el consomé que se produce al cocinar la barbacoa.</p>
 </div>
