--- a/index.html
+++ b/index.html
@@ -75,8 +75,7 @@ function MM_swapImage() { //v3.0
   </li>
   </ul>
   </div>
-  <br>
-  <br>
+<br><br>
   <div data-role="collapsible" data-content-theme="false">
   <h1>Sobre El Autor</h1>
   <div>
@@ -88,11 +87,11 @@ function MM_swapImage() { //v3.0
   <p>Email:eduardo4g.dam@gmail.com</p>
    <p>Escuela:CBTis No.16</p>
     <p>Especialidad:Programacion</p>
-
+    </div>
   </div>
-  </div>
+   <br>
+  <br>
   Para Mas Imformacion sobre atlixco:<a href="http://turismoatlixco.com/"> http://turismoatlixco.com/</a>
-  <br><br>
   </div>
  <div data-role="footer" align="center" data-theme="a"data-position="fixed">
   <p><img src="res/android/mdpi.png"width="56" height="46">
@@ -128,7 +127,7 @@ function MM_swapImage() { //v3.0
     <p><img src="imagenes/Ubic.png"></p>
   </center> </div>
   <div data-role="collapsible" data-content-theme="false">
-   <h1>Ubicacion</h1>
+   <h1>Video</h1>
   <center> <iframe width="250" height="150" src="https://www.youtube.com/embed/7kD0c6dMcfA" frameborder="0" allowfullscreen></iframe></center>
    </div>
    </div>
