--- a/index.html
+++ b/index.html
@@ -76,6 +76,10 @@ function MM_swapImage() { //v3.0
   </ul>
   </div>
 <br><br>
+ <div data-role="collapsible" data-content-theme="false">
+  <h1>Para Mas Imformacion</h1>
+  <a href="http://turismoatlixco.com/"> http://turismoatlixco.com/</a>
+  </div>
   <div data-role="collapsible" data-content-theme="false">
   <h1>Sobre El Autor</h1>
   <div>
@@ -89,10 +93,7 @@ function MM_swapImage() { //v3.0
     <p>Especialidad:Programacion</p>
     </div>
   </div>
-   </div>
-   <br>
-  <br>
-  Para Mas Imformacion sobre atlixco:<a href="http://turismoatlixco.com/"> http://turismoatlixco.com/</a>
+  <div>
  <div data-role="footer" align="center" data-theme="a"data-position="fixed">
   <p><img src="res/android/mdpi.png"width="56" height="46">
   </p>
