--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@ function MM_swapImage() { //v3.0
     </div>
   </div>
   <div>
+  </div>
  <div data-role="footer" align="center" data-theme="a"data-position="fixed">
   <p><img src="res/android/mdpi.png"width="56" height="46">
   </p>
