--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ function MM_swapImage() { //v3.0
   </div>
 <br><br>
  <div data-role="collapsible" data-content-theme="false">
-  <h1>Para Mas Imformacion</h1>
+  <h1>Para Mas Informacion</h1>
   <a href="http://turismoatlixco.com/"> http://turismoatlixco.com/</a>
   </div>
   <div data-role="collapsible" data-content-theme="false">
@@ -109,7 +109,7 @@ function MM_swapImage() { //v3.0
   <div data-role="content">
  <center><a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image14','','imagenes/atlixco2.jpg',1)"><img src="imagenes/atlixco.jpg" width="276" height="217" id="Image14"></a></center>
  <div data-role="collapsible" data-content-theme="false">
-   <h1>Imformacion</h1>
+   <h1>Informacion</h1>
    <p>Atlixco es un productor agrícola altamente reconocido a nivel nacional e internacional por su gran variedad y calidad de árboles ornamentales y frutales, así como de plantas y flores para huerto o decoración; así que no dejes pasar la oportunidad de visitar la zona de viveros, en donde encontrarás un paraíso lleno de color y aroma que se presenta en armonía para deleitar a residentes y visitantes de la ciudad.</p><center> <img src="imagenes/a.jpg" width="316" height="180"></center>
 
    </div>
